[project]
name = "repointelv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "fastmcp>=3.3.1",
    "gitpython>=3.1.50",
    "lancedb>=0.30.2",
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.1",
    "mcp[cli]>=1.27.1",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "ragas>=0.4.3",
    "sentence-transformers>=5.5.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-languages>=1.10.2",
    "uvicorn>=0.47.0",
    "pywin32==311; sys_platform == 'win32'"
]
